--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,4 @@
 <h1>Welcome#index</h1>
 <h2>This is my first Ruby app<h2>
+<p>We are finally testing this thing out</p>
 <p>Find me in app/views/welcome/index.html.erb</p>
